# fast_image

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pubspec.yaml
.github/workflows/: build_release.yaml
native/: Cargo.toml  cbindgen.toml  cbindgen.yaml  rust-toolchain.toml
native/.cargo/: config.toml
native/src/: api.rs  ffi.rs  lib.rs
scripts/: build.sh  cbindgen.sh
